# sapiens

./: pyproject.toml
cv/: pyproject.toml
cv/requirements/: docs.txt
det/: pyproject.toml  setup.py
det/requirements/: tracking.txt
engine/: pyproject.toml
engine/mmengine/: version.py
engine/mmengine/registry/: registry.py
engine/mmengine/runner/: checkpoint.py
lite/demo/: vis_pose.py
lite/scripts/demo/bfloat16/: pose_keypoints308.nu
pose/: pyproject.toml
pose/requirements/: mminstall.txt  readthedocs.txt
pose/tools/deployment/: torch_optimization.py
pretrain/: pyproject.toml
pretrain/mmpretrain/models/multimodal/ofa/: ofa_modules.py
pretrain/requirements/: mminstall.txt
scripts/: make_lite_model.nu  pose_keypoints308.nu
