[project]
name = "sapiens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
  "torch>=2.7.0",
  "torchaudio",
  "torchvision>=0.20.1",
  "kaolin",
  "json-tricks>=3.17.3",
  "tqdm>=4.67.1",
  "opencv-python>=4.11.0.86",
  "sapiens-pose",             # this is mmpose
  "sapiens-pretrain",         # this is mmpretrain
  "sapiens-det",              # this is mmdetection
  "sapiens-engine",           # this is mmengine
  "sapiens-cv",               # this is mmcv
  "numpy<2.0.0",
  "pandas>=2.3.0",
  "triton",
]

[tool.uv]
no-build-isolation-package = ["sapiens-det"]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "mtb"
url = "https://wheels.melmassadian.com"
explicit = true

[[tool.uv.index]]
name = "kaolin"
url = "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/index.html"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-nightly", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
]
torchvision = [
  { index = "pytorch-nightly", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
]
torchaudio = [
  { index = "pytorch-nightly", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
]
# sapiens-cv = [
#   { index = "mtb", marker = "sys_platform == 'win32'" },
#   { git = "https://github.com/facebookresearch/sapiens.git", subdirectory = "cv", marker = "sys_platform != 'win32'" },
# ]
# sapiens-pretrain = [
#   { git = "https://github.com/facebookresearch/sapiens.git", subdirectory = "pretrain" },
# ]
#
# sapiens-engine = [
#   { git = "https://github.com/facebookresearch/sapiens.git", subdirectory = "engine" },
# ]
# sapiens-det = [
#   { git = "https://github.com/facebookresearch/sapiens.git", subdirectory = "det" },
# ]
# sapiens-pose = [
#   { git = "https://github.com/facebookresearch/sapiens.git", subdirectory = "pose" },
# ]

sapiens-pretrain = { workspace = true }
sapiens-cv = { workspace = true }
sapiens-engine = { workspace = true }
sapiens-det = { workspace = true }
sapiens-pose = { workspace = true }

triton = { url = "https://github.com/woct0rdho/triton-windows/releases/download/v3.2.0-windows.post9/triton-3.2.0-cp311-cp311-win_amd64.whl" }

[tool.uv.workspace]
members = ["cv", "engine", "det", "pose", "pretrain"]

[dependency-groups]
dev = ["pip", "setuptools>=80.9.0"]
