[project]
name = "sapiens-cv"
dynamic = [
  "authors",
  "classifiers",
  "description",
  "keywords",
  "optional-dependencies",
  "requires-python",
  "version",
]
dependencies = [
  "addict>=2.4.0",
  "numpy>=1.26.4",
  "packaging>=25.0",
  "pillow>=11.2.1",
  "pyyaml>=6.0.2",
  "regex>=2024.11.6 ; sys_platform == 'win32'",
  "yapf>=0.43.0",
]

[build-system]
requires = [
  "setuptools>=42",
  "ninja>=1.11.1.4",
  "psutil>=7.0.0",
  "torch",
  "pytest-runner>=6.0.1",
]
build-backend = "setuptools.build_meta"
