[project]
name = "sapiens-det"
dynamic = [
  "authors",
  "classifiers",
  "description",
  "keywords",
  "optional-dependencies",
  "version",
]
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10.3",
  "numpy<2.0.0",
  "pycocotools>=2.0.10",
  "scipy>=1.16.0",
  "shapely>=2.1.1",
  "six>=1.17.0",
  "terminaltables>=3.1.10",
  "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=42", "cython", "numpy<2.0.0"]
build-backend = "setuptools.build_meta"
